Added a button for mounting a RAID device.
---- Changes since 1.200 ----
RAID devices can now be easily mounted as virtual memory.
---- Changes since 1.280 ----
Added support for RAID 6 arrays when using MDADM.
---- Changes since 1.340 ----
Removed need to explicitly select a parity disk for RAID 4 when using MDADM.
---- Changes since 1.360 ----
Added support for RAID 10 arrays when using MDADM.
Changed the main page to use a table for existing RAID arrays, rather than icons.
Added a section for configuring RAID problem notification when using MDADM.
---- Changes since 1.390 ----
Converted all pages to use the new Webmin UI library, for a more consistent look.
Added a confirmation page before deleting a RAID array.
Create /dev/md* device file if missing when creating a RAID set.
---- Changes since 1.450 ----
Added a button for changing the number of active devices in a RAID 5 or 6 set, thanks to Diego Zuccato.
---- Changes since 1.470 ----
Added an option to the RAID 1 creation form to mark one of the disks as missing initially.
Run the update-initramfs -u command after changing mdadm.conf, to sync it into any ramdisk for use at boot time.
---- Changes since 1.480 ----
Raw disks with no partitions can now also be used as RAID members.
Spare groups can now be created and used when creating a RAID device.
When a RAID set is deleted, the superblocks on component devices are cleared in order to remove metadata about the old RAID set.
Added an option to skip initialization of metadata when creating a RAID device.
RAID 6 devices can now have spares, thanks to Caspar Smit.
---- Changes since 1.490 ----
Added a button to remove a detached partition, thanks to Caspar Smit.
---- Changes since 1.500 ----
Added support for creating EXT4 filesystems.
---- Changes since 1.510 ----
Conversion from RAID 5 to 6 and vice versa is now possible, thanks to Caspar Smit.